修改登录和注册错误提示体验

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -65,6 +65,9 @@
 				}
 			})
 		})
+		$(".login input").on('focus', function(){
+			$("#logintext").text('')
+		})
  	</script>
 
 <%-include header %>
