--- a/views/regis.ejs
+++ b/views/regis.ejs
@@ -69,6 +69,9 @@
 				}
 			})
 		})
+		$(".login input").on('focus', function(){
+			$("#registext").text('')
+		})
 	</script>
 
 <%-include footer %>
