--- a/views/header.ejs
+++ b/views/header.ejs
@@ -5,5 +5,6 @@
     <link href="https://cdn.bootcss.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet">
     <link rel='stylesheet' href='/stylesheets/style.css' />
     <script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://cdn.bootcss.com/moment.js/2.22.0/moment.min.js"></script>
   </head>
   <body>
